--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "mongoose": "^5.11.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "PORT=1337 react-scripts start",
+    "start": "SET PORT=1337 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
