--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -26,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "node -r esm ./server/server.js",
+    "serve": "node -r esm server/server.js",
+    "nodemon": "nodemon -r esm server/server.js",
     "citest": "node citest.js"
   },
   "eslintConfig": {
@@ -46,9 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10"
   }
 }
