--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "is-benji": "^1.1.4",
     "mongoose": "^5.11.13",
     "react": "^17.0.1",
