--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.1",
     "sequelize": "^6.5.0",
     "sqlite3": "^5.0.1",
+    "validator": "^13.5.2",
     "web-vitals": "^0.2.4"
   },
   "proxy": "http://localhost:8080",
