--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "node -r esm server.js",
+    "start": "node -r esm server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
