--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "name": "my-app",
   "version": "0.1.0",
+  "engines": {"node": "14.15.4"},
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
