Change applicationpage to function more like description

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eject": "react-scripts eject",
     "serve": "node -r esm server/server.js",
     "dev": "react-scripts start",
-    "nodemon": "nodemon server/server.js",
+    "nodemon": "nodemon -r esm server/server.js",
     "citest": "node citest.js"
   },
   "eslintConfig": {
