--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "node -r esm server/server.js",
-    "nodemon": "nodemon -r esm server/server.js",
+    "dev": "react-scripts start",
+    "nodemon": "nodemon server/server.js",
     "citest": "node citest.js"
   },
   "eslintConfig": {
