--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "dev": "react-scripts start",
     "serve": "node -r esm server/server.js",
     "dev": "react-scripts start",
     "nodemon": "nodemon server/server.js",
