--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "type":"module",
   "name": "my-app",
   "type": "module",
   "version": "0.1.0",
   "private": true,
-  "engines": {"node": "14.15.4"},
+  "engines": {
+    "node": "14.15.4"
+  },
   "dependencies": {
     "@std/esm": "^0.26.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -16,6 +17,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "is-benji": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
@@ -34,7 +36,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "react-scripts start",
     "serve": "node -r esm server/server.js",
     "dev": "react-scripts start",
     "nodemon": "nodemon -r esm server/server.js",
