--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "node -r esm server/server.js",
     "dev": "react-scripts start",
-    "nodemon": "nodemon -r esm server/server.js",
+    "nodemon": "nodemon server/server.js",
     "citest": "node citest.js"
   },
   "eslintConfig": {
